# resume

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agent-memory/: MEMORY.md.enc  privacy-patterns.txt.enc
cv_private/: CV_Andrey_Urakov_AI_Engineer_private_en.pdf.enc  CV_Andrey_Urakov_AI_Engineer_private_ru.pdf.enc
docs/: maintenance.md
scripts/: __init__.py  resume_workflow.py
src/: CV_Andrey_Urakov_AI_Engineer_private_en.tex.enc  CV_Andrey_Urakov_AI_Engineer_private_ru.tex.enc  CV_Andrey_Urakov_AI_Engineer_public_en.tex  CV_Andrey_Urakov_AI_Engineer_public_ru.tex
